--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,15 +8,16 @@
 	mc:Ignorable="d"
 	Title="PictureDay" Height="600" Width="900"
 	WindowStartupLocation="CenterScreen"
+	ResizeMode="NoResize"
 	Closing="Window_Closing">
-	<Grid>
+	<Grid Background="{DynamicResource BackgroundBrush}">
 	<Grid.RowDefinitions>
 		<RowDefinition Height="Auto"/>
 		<RowDefinition Height="*"/>
 	</Grid.RowDefinitions>
 	<Button x:Name="TakeScreenshotButton" Grid.Row="0" Content="Take Screenshot Now"
-		Height="35" Margin="10" HorizontalAlignment="Left" Click="TakeScreenshotButton_Click"/>
-	<TabControl x:Name="MainTabControl" Grid.Row="1">
+		Padding="10,5" Margin="10" HorizontalAlignment="Left" Click="TakeScreenshotButton_Click"/>
+	<TabControl x:Name="MainTabControl" Grid.Row="1" Background="{DynamicResource BackgroundBrush}">
 	<TabItem Header="Photo Gallery">
 	<views:PhotoGalleryView x:Name="PhotoGalleryViewControl"/>
 	</TabItem>
