--- a/Themes/LightTheme.xaml
+++ b/Themes/LightTheme.xaml
@@ -1,75 +1,75 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="BackgroundBrush" Color="#FFFFFF"/>
-    <SolidColorBrush x:Key="ForegroundBrush" Color="#000000"/>
-    <SolidColorBrush x:Key="BorderBrush" Color="#CCCCCC"/>
-    <SolidColorBrush x:Key="TextBrush" Color="#000000"/>
-    <SolidColorBrush x:Key="ControlBackgroundBrush" Color="#F5F5F5"/>
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	<SolidColorBrush x:Key="BackgroundBrush" Color="#FFFFFF"/>
+	<SolidColorBrush x:Key="ForegroundBrush" Color="#000000"/>
+	<SolidColorBrush x:Key="BorderBrush" Color="#CCCCCC"/>
+	<SolidColorBrush x:Key="TextBrush" Color="#000000"/>
+	<SolidColorBrush x:Key="ControlBackgroundBrush" Color="#F5F5F5"/>
 
-    <Style TargetType="Button">
-        <Setter Property="Background" Value="#F5F5F5"/>
-        <Setter Property="Foreground" Value="#000000"/>
-        <Setter Property="BorderBrush" Value="#CCCCCC"/>
-    </Style>
+	<Style TargetType="Button">
+		<Setter Property="Background" Value="#F5F5F5"/>
+		<Setter Property="Foreground" Value="#000000"/>
+		<Setter Property="BorderBrush" Value="#CCCCCC"/>
+	</Style>
 
-    <Style TargetType="TextBox">
-        <Setter Property="Background" Value="#FFFFFF"/>
-        <Setter Property="Foreground" Value="#000000"/>
-        <Setter Property="BorderBrush" Value="#CCCCCC"/>
-    </Style>
+	<Style TargetType="TextBox">
+		<Setter Property="Background" Value="#FFFFFF"/>
+		<Setter Property="Foreground" Value="#000000"/>
+		<Setter Property="BorderBrush" Value="#CCCCCC"/>
+	</Style>
 
-    <Style TargetType="ComboBox">
-        <Setter Property="Background" Value="#FFFFFF"/>
-        <Setter Property="Foreground" Value="#000000"/>
-        <Setter Property="BorderBrush" Value="#CCCCCC"/>
-    </Style>
+	<Style TargetType="ComboBox">
+		<Setter Property="Background" Value="#FFFFFF"/>
+		<Setter Property="Foreground" Value="#000000"/>
+		<Setter Property="BorderBrush" Value="#CCCCCC"/>
+	</Style>
 
-    <Style TargetType="ListBox">
-        <Setter Property="Background" Value="#FFFFFF"/>
-        <Setter Property="Foreground" Value="#000000"/>
-        <Setter Property="BorderBrush" Value="#CCCCCC"/>
-    </Style>
+	<Style TargetType="ListBox">
+		<Setter Property="Background" Value="#FFFFFF"/>
+		<Setter Property="Foreground" Value="#000000"/>
+		<Setter Property="BorderBrush" Value="#CCCCCC"/>
+	</Style>
 
-    <Style TargetType="GroupBox">
-        <Setter Property="Foreground" Value="#000000"/>
-        <Setter Property="BorderBrush" Value="#CCCCCC"/>
-    </Style>
+	<Style TargetType="GroupBox">
+		<Setter Property="Foreground" Value="#000000"/>
+		<Setter Property="BorderBrush" Value="#CCCCCC"/>
+	</Style>
 
-    <Style TargetType="Border">
-        <Setter Property="BorderBrush" Value="#CCCCCC"/>
-    </Style>
+	<Style TargetType="Border">
+		<Setter Property="BorderBrush" Value="#CCCCCC"/>
+	</Style>
 
-    <Style TargetType="TextBlock">
-        <Setter Property="Foreground" Value="#000000"/>
-    </Style>
+	<Style TargetType="TextBlock">
+		<Setter Property="Foreground" Value="#000000"/>
+	</Style>
 
-    <Style TargetType="CheckBox">
-        <Setter Property="Foreground" Value="#000000"/>
-    </Style>
+	<Style TargetType="CheckBox">
+		<Setter Property="Foreground" Value="#000000"/>
+	</Style>
 
-    <Style TargetType="TabControl">
-        <Setter Property="Background" Value="#FFFFFF"/>
-        <Setter Property="Foreground" Value="#000000"/>
-    </Style>
+	<Style TargetType="TabControl">
+		<Setter Property="Background" Value="#FFFFFF"/>
+		<Setter Property="Foreground" Value="#000000"/>
+	</Style>
 
-    <Style TargetType="TabItem">
-        <Setter Property="Background" Value="#F5F5F5"/>
-        <Setter Property="Foreground" Value="#000000"/>
-        <Setter Property="BorderBrush" Value="#CCCCCC"/>
-        <Style.Triggers>
-            <Trigger Property="IsSelected" Value="True">
-                <Setter Property="Background" Value="#FFFFFF"/>
-                <Setter Property="Foreground" Value="#000000"/>
-                <Setter Property="BorderBrush" Value="#CCCCCC"/>
-            </Trigger>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#E5E5E5"/>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
+	<Style TargetType="TabItem">
+		<Setter Property="Background" Value="#F5F5F5"/>
+		<Setter Property="Foreground" Value="#000000"/>
+		<Setter Property="BorderBrush" Value="#CCCCCC"/>
+		<Style.Triggers>
+			<Trigger Property="IsSelected" Value="True">
+				<Setter Property="Background" Value="#FFFFFF"/>
+				<Setter Property="Foreground" Value="#000000"/>
+				<Setter Property="BorderBrush" Value="#CCCCCC"/>
+			</Trigger>
+			<Trigger Property="IsMouseOver" Value="True">
+				<Setter Property="Background" Value="#E5E5E5"/>
+			</Trigger>
+		</Style.Triggers>
+	</Style>
 
-    <Style TargetType="ScrollViewer">
-        <Setter Property="Background" Value="#FFFFFF"/>
-    </Style>
+	<Style TargetType="ScrollViewer">
+		<Setter Property="Background" Value="#FFFFFF"/>
+	</Style>
 </ResourceDictionary>
 
