--- a/Views/PhotoGalleryView.xaml
+++ b/Views/PhotoGalleryView.xaml
@@ -1,64 +1,64 @@
-<UserControl x:Class="PictureDay.Views.PhotoGalleryView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="{DynamicResource BackgroundBrush}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+﻿<UserControl x:Class="PictureDay.Views.PhotoGalleryView"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 mc:Ignorable="d"
+			 d:DesignHeight="450" d:DesignWidth="800">
+	<Grid Background="{DynamicResource BackgroundBrush}">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
 
-        <!-- Navigation Controls -->
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10" HorizontalAlignment="Center">
-            <Button x:Name="PrevMonthButton" Content="&lt;" Padding="8,4" Margin="5,0" Click="PrevMonthButton_Click"/>
-            <ComboBox x:Name="MonthComboBox" MinWidth="120" Margin="5,0" SelectionChanged="MonthComboBox_SelectionChanged"/>
-            <ComboBox x:Name="YearComboBox" MinWidth="80" Margin="5,0" SelectionChanged="YearComboBox_SelectionChanged"/>
-            <Button x:Name="NextMonthButton" Content="&gt;" Padding="8,4" Margin="5,0" Click="NextMonthButton_Click"/>
-        </StackPanel>
+		<!-- Navigation Controls -->
+		<StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10" HorizontalAlignment="Center">
+			<Button x:Name="PrevMonthButton" Content="&lt;" Padding="8,4" Margin="5,0" Click="PrevMonthButton_Click"/>
+			<ComboBox x:Name="MonthComboBox" MinWidth="120" Margin="5,0" SelectionChanged="MonthComboBox_SelectionChanged"/>
+			<ComboBox x:Name="YearComboBox" MinWidth="80" Margin="5,0" SelectionChanged="YearComboBox_SelectionChanged"/>
+			<Button x:Name="NextMonthButton" Content="&gt;" Padding="8,4" Margin="5,0" Click="NextMonthButton_Click"/>
+		</StackPanel>
 
-        <!-- Photo Gallery -->
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-            <ItemsControl x:Name="PhotosItemsControl" Margin="10">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <UniformGrid Columns="3" HorizontalAlignment="Center"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="5" Padding="5" CornerRadius="3" Background="{DynamicResource BackgroundBrush}">
-                            <StackPanel>
-                                <Viewbox Width="250" Height="100" Stretch="Uniform">
-                                    <Image Source="{Binding ImageSource}"
-                                           MouseLeftButtonDown="Image_MouseLeftButtonDown"
-                                           MouseRightButtonDown="Image_MouseRightButtonDown"
-                                           Cursor="Hand">
-                                        <Image.ContextMenu>
-                                            <ContextMenu>
-                                                <MenuItem Header="Open" Click="ContextMenu_Open_Click"/>
-                                                <MenuItem Header="Open in File Explorer" Click="ContextMenu_OpenInExplorer_Click"/>
-                                                <MenuItem Header="Copy Image" Click="ContextMenu_CopyImage_Click"/>
-                                                <MenuItem Header="Copy File Location" Click="ContextMenu_CopyPath_Click"/>
-                                                <Separator/>
-                                                <MenuItem Header="Delete" Click="ContextMenu_Delete_Click"/>
-                                            </ContextMenu>
-                                        </Image.ContextMenu>
-                                    </Image>
-                                </Viewbox>
-                                <TextBlock Text="{Binding DateLabel}"
-                                           HorizontalAlignment="Center"
-                                           Margin="0,5,0,0"
-                                           FontSize="12"
-                                           Foreground="{DynamicResource TextBrush}"/>
-                            </StackPanel>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-    </Grid>
+		<!-- Photo Gallery -->
+		<ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+			<ItemsControl x:Name="PhotosItemsControl" Margin="10">
+				<ItemsControl.ItemsPanel>
+					<ItemsPanelTemplate>
+						<UniformGrid Columns="3" HorizontalAlignment="Center"/>
+					</ItemsPanelTemplate>
+				</ItemsControl.ItemsPanel>
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<Border BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="5" Padding="5" CornerRadius="3" Background="{DynamicResource BackgroundBrush}">
+							<StackPanel>
+								<Viewbox Width="250" Height="100" Stretch="Uniform">
+									<Image Source="{Binding ImageSource}"
+										   MouseLeftButtonDown="Image_MouseLeftButtonDown"
+										   MouseRightButtonDown="Image_MouseRightButtonDown"
+										   Cursor="Hand">
+										<Image.ContextMenu>
+											<ContextMenu>
+												<MenuItem Header="Open" Click="ContextMenu_Open_Click"/>
+												<MenuItem Header="Open in File Explorer" Click="ContextMenu_OpenInExplorer_Click"/>
+												<MenuItem Header="Copy Image" Click="ContextMenu_CopyImage_Click"/>
+												<MenuItem Header="Copy File Location" Click="ContextMenu_CopyPath_Click"/>
+												<Separator/>
+												<MenuItem Header="Delete" Click="ContextMenu_Delete_Click"/>
+											</ContextMenu>
+										</Image.ContextMenu>
+									</Image>
+								</Viewbox>
+								<TextBlock Text="{Binding DateLabel}"
+										   HorizontalAlignment="Center"
+										   Margin="0,5,0,0"
+										   FontSize="12"
+										   Foreground="{DynamicResource TextBrush}"/>
+							</StackPanel>
+						</Border>
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</ScrollViewer>
+	</Grid>
 </UserControl>
 
