--- a/Views/UpdateWindow.xaml
+++ b/Views/UpdateWindow.xaml
@@ -53,6 +53,10 @@
 			<Button x:Name="CloseButton" Content="Close"
 					Padding="15,5" Margin="5,0"
 					Click="CloseButton_Click"/>
+			<Button x:Name="OkButton" Content="OK"
+					Padding="15,5" Margin="5,0"
+					Click="OkButton_Click"
+					Visibility="Collapsed"/>
 		</StackPanel>
 
 		<Button Grid.Row="3" x:Name="DownloadButton"
