Better time management + Squash Some Bugs

--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -61,7 +61,7 @@
 			<StackPanel Margin="10">
 				<TextBlock Text="Schedule Mode:" Margin="0,0,0,5"/>
 				<ComboBox x:Name="ScheduleModeComboBox" Margin="0,0,0,10" SelectionChanged="ScheduleModeComboBox_SelectionChanged">
-					<ComboBoxItem Content="Random Time (9 AM - 3 AM)" Tag="Random"/>
+					<ComboBoxItem Content="Random Time" Tag="Random"/>
 					<ComboBoxItem Content="Fixed Time" Tag="FixedTime"/>
 					<ComboBoxItem Content="Time Range" Tag="TimeRange"/>
 				</ComboBox>
