--- a/Themes/DarkTheme.xaml
+++ b/Themes/DarkTheme.xaml
@@ -1,5 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	<ResourceDictionary.MergedDictionaries>
+		<ResourceDictionary Source="LightTheme.xaml"/>
+	</ResourceDictionary.MergedDictionaries>
+
 	<SolidColorBrush x:Key="BackgroundBrush" Color="#1E1E1E"/>
 	<SolidColorBrush x:Key="ForegroundBrush" Color="#FFFFFF"/>
 	<SolidColorBrush x:Key="BorderBrush" Color="#3F3F3F"/>
@@ -10,74 +14,6 @@
 		<Setter Property="Background" Value="#2D2D2D"/>
 		<Setter Property="Foreground" Value="#FFFFFF"/>
 		<Setter Property="BorderBrush" Value="#3F3F3F"/>
-		<Setter Property="BorderThickness" Value="1"/>
-		<Setter Property="HorizontalContentAlignment" Value="Center"/>
-		<Setter Property="VerticalContentAlignment" Value="Center"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="Button">
-					<Border x:Name="border"
-							Background="{TemplateBinding Background}"
-							BorderBrush="{TemplateBinding BorderBrush}"
-							BorderThickness="{TemplateBinding BorderThickness}"
-							CornerRadius="2"
-							SnapsToDevicePixels="True">
-						<ContentPresenter x:Name="contentPresenter"
-										HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-										VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-										Content="{TemplateBinding Content}"
-										ContentTemplate="{TemplateBinding ContentTemplate}"
-										RecognizesAccessKey="True"
-										SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-										TextBlock.Foreground="{TemplateBinding Foreground}">
-							<ContentPresenter.Resources>
-								<Style TargetType="TextBlock">
-									<Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
-								</Style>
-							</ContentPresenter.Resources>
-						</ContentPresenter>
-					</Border>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsMouseOver" Value="True">
-							<Setter Property="Foreground" Value="#FFFFFF"/>
-							<Setter TargetName="border" Property="Background" Value="#3D3D3D"/>
-						</Trigger>
-						<Trigger Property="IsPressed" Value="True">
-							<Setter Property="Foreground" Value="#000000"/>
-							<Setter TargetName="border" Property="Background" Value="#E0E0E0"/>
-							<Setter TargetName="contentPresenter" Property="TextBlock.Foreground" Value="#000000"/>
-						</Trigger>
-						<Trigger Property="IsFocused" Value="True">
-							<Setter Property="Foreground" Value="#000000"/>
-							<Setter TargetName="border" Property="Background" Value="#E0E0E0"/>
-							<Setter TargetName="border" Property="BorderBrush" Value="#5F5F5F"/>
-							<Setter TargetName="contentPresenter" Property="TextBlock.Foreground" Value="#000000"/>
-						</Trigger>
-						<Trigger Property="IsDefaulted" Value="True">
-							<Setter Property="Foreground" Value="#000000"/>
-							<Setter TargetName="border" Property="Background" Value="#E0E0E0"/>
-							<Setter TargetName="border" Property="BorderBrush" Value="#5F5F5F"/>
-							<Setter TargetName="contentPresenter" Property="TextBlock.Foreground" Value="#000000"/>
-						</Trigger>
-						<MultiTrigger>
-							<MultiTrigger.Conditions>
-								<Condition Property="IsFocused" Value="True"/>
-								<Condition Property="IsDefaulted" Value="True"/>
-							</MultiTrigger.Conditions>
-							<Setter Property="Foreground" Value="#000000"/>
-							<Setter TargetName="border" Property="Background" Value="#E0E0E0"/>
-							<Setter TargetName="border" Property="BorderBrush" Value="#5F5F5F"/>
-							<Setter TargetName="contentPresenter" Property="TextBlock.Foreground" Value="#000000"/>
-						</MultiTrigger>
-						<Trigger Property="IsEnabled" Value="False">
-							<Setter Property="Foreground" Value="#808080"/>
-							<Setter TargetName="border" Property="Background" Value="#1A1A1A"/>
-							<Setter TargetName="border" Property="BorderBrush" Value="#2A2A2A"/>
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
 	</Style>
 
 	<Style TargetType="TextBox">
@@ -90,33 +26,130 @@
 		<Setter Property="Background" Value="#2D2D2D"/>
 		<Setter Property="Foreground" Value="#FFFFFF"/>
 		<Setter Property="BorderBrush" Value="#3F3F3F"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="ComboBox">
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition/>
+							<ColumnDefinition Width="0"/>
+							<ColumnDefinition Width="Auto"/>
+						</Grid.ColumnDefinitions>
+						<ToggleButton x:Name="ToggleButton"
+									Grid.ColumnSpan="3"
+									Focusable="False"
+									IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+									ClickMode="Press"
+									Background="Transparent"
+									BorderBrush="Transparent"
+									BorderThickness="0"/>
+						<Border x:Name="Border"
+								Grid.ColumnSpan="3"
+								Background="#2D2D2D"
+								BorderBrush="#3F3F3F"
+								BorderThickness="{TemplateBinding BorderThickness}"
+								IsHitTestVisible="False"/>
+						<Grid x:Name="ContentGrid" Grid.ColumnSpan="3" Margin="0" IsHitTestVisible="False">
+							<Border Background="#2D2D2D"/>
+							<ContentPresenter x:Name="ContentSite"
+											IsHitTestVisible="False"
+											Content="{TemplateBinding SelectionBoxItem}"
+											ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
+											ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+											Margin="3,3,23,3"
+											VerticalAlignment="Center"
+											HorizontalAlignment="Left">
+								<ContentPresenter.Resources>
+									<Style TargetType="TextBlock">
+										<Setter Property="Foreground" Value="#FFFFFF"/>
+										<Setter Property="Background" Value="Transparent"/>
+									</Style>
+								</ContentPresenter.Resources>
+							</ContentPresenter>
+						</Grid>
+						<TextBox x:Name="PART_EditableTextBox"
+								HorizontalAlignment="Left"
+								VerticalAlignment="Center"
+								Margin="3,3,23,3"
+								Focusable="True"
+								Background="#2D2D2D"
+								Foreground="#FFFFFF"
+								BorderThickness="0"
+								BorderBrush="Transparent"
+								Visibility="Hidden"
+								IsReadOnly="{TemplateBinding IsReadOnly}">
+							<TextBox.Style>
+								<Style TargetType="TextBox">
+									<Setter Property="Background" Value="#2D2D2D"/>
+									<Setter Property="Foreground" Value="#FFFFFF"/>
+									<Setter Property="BorderBrush" Value="Transparent"/>
+									<Setter Property="BorderThickness" Value="0"/>
+								</Style>
+							</TextBox.Style>
+						</TextBox>
+						<Grid Grid.Column="2" HorizontalAlignment="Right" Width="20" IsHitTestVisible="False">
+							<Path x:Name="Arrow"
+								  Fill="#FFFFFF"
+								  HorizontalAlignment="Center"
+								  VerticalAlignment="Center"
+								  Data="M 0 0 L 4 4 L 8 0 Z"/>
+						</Grid>
+						<Popup x:Name="Popup"
+							  Placement="Bottom"
+							  IsOpen="{TemplateBinding IsDropDownOpen}"
+							  AllowsTransparency="True"
+							  Focusable="False"
+							  PopupAnimation="Slide"
+							  PlacementTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}">
+							<Border x:Name="DropDownBorder"
+									Background="#2D2D2D"
+									BorderBrush="#3F3F3F"
+									BorderThickness="1"
+									MaxHeight="{TemplateBinding MaxDropDownHeight}"
+									Width="{Binding ActualWidth, RelativeSource={RelativeSource TemplatedParent}}">
+								<ScrollViewer Margin="4,6,4,6"
+											SnapsToDevicePixels="True"
+											Background="#2D2D2D">
+									<StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained"/>
+								</ScrollViewer>
+							</Border>
+						</Popup>
+					</Grid>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsEditable" Value="True">
+							<Setter Property="IsTabStop" Value="False"/>
+							<Setter TargetName="PART_EditableTextBox" Property="Visibility" Value="Visible"/>
+							<Setter TargetName="ContentSite" Property="Visibility" Value="Hidden"/>
+						</Trigger>
+						<Trigger Property="IsMouseOver" Value="True">
+							<Setter TargetName="Border" Property="BorderBrush" Value="#5F5F5F"/>
+						</Trigger>
+						<Trigger Property="IsEnabled" Value="False">
+							<Setter TargetName="Border" Property="Background" Value="#1A1A1A"/>
+							<Setter TargetName="Border" Property="BorderBrush" Value="#2A2A2A"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
 	</Style>
 
 	<Style TargetType="ComboBoxItem">
 		<Setter Property="Background" Value="#2D2D2D"/>
 		<Setter Property="Foreground" Value="#FFFFFF"/>
 		<Setter Property="BorderBrush" Value="Transparent"/>
+		<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+		<Setter Property="Padding" Value="4,2"/>
 		<Style.Triggers>
 			<Trigger Property="IsMouseOver" Value="True">
 				<Setter Property="Background" Value="#3D3D3D"/>
-				<Setter Property="Foreground" Value="#FFFFFF"/>
 			</Trigger>
 			<Trigger Property="IsSelected" Value="True">
-				<Setter Property="Background" Value="#5A5A5A"/>
-				<Setter Property="Foreground" Value="#FFFFFF"/>
+				<Setter Property="Background" Value="#4D4D4D"/>
 			</Trigger>
 			<Trigger Property="IsHighlighted" Value="True">
 				<Setter Property="Background" Value="#3D3D3D"/>
-				<Setter Property="Foreground" Value="#FFFFFF"/>
 			</Trigger>
-			<MultiTrigger>
-				<MultiTrigger.Conditions>
-					<Condition Property="IsSelected" Value="True"/>
-					<Condition Property="IsHighlighted" Value="True"/>
-				</MultiTrigger.Conditions>
-				<Setter Property="Background" Value="#5A5A5A"/>
-				<Setter Property="Foreground" Value="#FFFFFF"/>
-			</MultiTrigger>
 		</Style.Triggers>
 	</Style>
 
@@ -129,14 +162,12 @@
 	<Style TargetType="ListBoxItem">
 		<Setter Property="Background" Value="#2D2D2D"/>
 		<Setter Property="Foreground" Value="#FFFFFF"/>
-		<Setter Property="BorderBrush" Value="Transparent"/>
 		<Style.Triggers>
 			<Trigger Property="IsMouseOver" Value="True">
 				<Setter Property="Background" Value="#3D3D3D"/>
 			</Trigger>
 			<Trigger Property="IsSelected" Value="True">
 				<Setter Property="Background" Value="#4D4D4D"/>
-				<Setter Property="Foreground" Value="#FFFFFF"/>
 			</Trigger>
 		</Style.Triggers>
 	</Style>
@@ -144,34 +175,6 @@
 	<Style TargetType="GroupBox">
 		<Setter Property="Foreground" Value="#FFFFFF"/>
 		<Setter Property="BorderBrush" Value="#3F3F3F"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="GroupBox">
-					<Grid>
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto"/>
-							<RowDefinition Height="*"/>
-						</Grid.RowDefinitions>
-						<Border x:Name="HeaderBorder"
-								Grid.Row="0"
-								BorderBrush="{TemplateBinding BorderBrush}"
-								BorderThickness="1,1,1,0"
-								Background="Transparent">
-							<ContentPresenter ContentSource="Header"
-											Margin="5,0,5,0"
-											TextBlock.Foreground="{TemplateBinding Foreground}"/>
-						</Border>
-						<Border x:Name="ContentBorder"
-								Grid.Row="1"
-								BorderBrush="{TemplateBinding BorderBrush}"
-								BorderThickness="1"
-								Background="Transparent">
-							<ContentPresenter Margin="{TemplateBinding Padding}"/>
-						</Border>
-					</Grid>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
 	</Style>
 
 	<Style TargetType="Border">
@@ -184,89 +187,6 @@
 
 	<Style TargetType="CheckBox">
 		<Setter Property="Foreground" Value="#FFFFFF"/>
-		<Setter Property="Background" Value="Transparent"/>
-		<Setter Property="BorderBrush" Value="#3F3F3F"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="CheckBox">
-					<Grid>
-						<Border x:Name="OuterBorder"
-								Width="16" Height="16"
-								BorderBrush="#3F3F3F"
-								BorderThickness="1"
-								Background="#2D2D2D">
-							<Path x:Name="CheckMark"
-								  Data="M 0 5 L 5 10 L 12 0"
-								  Stroke="#FFFFFF"
-								  StrokeThickness="2"
-								  Visibility="Collapsed"
-								  Margin="2"/>
-						</Border>
-						<ContentPresenter Margin="20,0,0,0"
-										VerticalAlignment="Center"
-										Content="{TemplateBinding Content}"/>
-					</Grid>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsChecked" Value="True">
-							<Setter TargetName="CheckMark" Property="Visibility" Value="Visible"/>
-						</Trigger>
-						<Trigger Property="IsMouseOver" Value="True">
-							<Setter TargetName="OuterBorder" Property="BorderBrush" Value="#5F5F5F"/>
-						</Trigger>
-						<Trigger Property="IsPressed" Value="True">
-							<Setter TargetName="OuterBorder" Property="Background" Value="#1D1D1D"/>
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
-
-	<Style TargetType="RadioButton">
-		<Setter Property="Foreground" Value="#FFFFFF"/>
-		<Setter Property="Background" Value="Transparent"/>
-		<Setter Property="BorderBrush" Value="#3F3F3F"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="RadioButton">
-					<Grid>
-						<Border x:Name="OuterBorder"
-								Width="16" Height="16"
-								BorderBrush="#3F3F3F"
-								BorderThickness="1"
-								Background="Transparent"
-								CornerRadius="8">
-							<Border x:Name="InnerBorder"
-									Width="8" Height="8"
-									Background="#FFFFFF"
-									CornerRadius="4"
-									Margin="3"/>
-						</Border>
-						<ContentPresenter Margin="20,0,0,0"
-										VerticalAlignment="Center"
-										Content="{TemplateBinding Content}"/>
-					</Grid>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsChecked" Value="True">
-							<Setter TargetName="InnerBorder" Property="Visibility" Value="Visible"/>
-						</Trigger>
-						<Trigger Property="IsChecked" Value="False">
-							<Setter TargetName="InnerBorder" Property="Visibility" Value="Collapsed"/>
-						</Trigger>
-						<Trigger Property="IsMouseOver" Value="True">
-							<Setter TargetName="OuterBorder" Property="BorderBrush" Value="#5F5F5F"/>
-						</Trigger>
-						<Trigger Property="IsPressed" Value="True">
-							<Setter TargetName="OuterBorder" Property="BorderBrush" Value="#7F7F7F"/>
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
-
-	<Style TargetType="Separator">
-		<Setter Property="Background" Value="#3F3F3F"/>
 	</Style>
 
 	<Style TargetType="TabControl">
@@ -275,17 +195,50 @@
 	</Style>
 
 	<Style TargetType="TabItem">
-		<Setter Property="Background" Value="#2D2D2D"/>
+		<Setter Property="Background" Value="#1E1E1E"/>
 		<Setter Property="Foreground" Value="#FFFFFF"/>
 		<Setter Property="BorderBrush" Value="#3F3F3F"/>
+		<Setter Property="Padding" Value="12,2"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="TabItem">
+					<Border x:Name="Border"
+							Background="{TemplateBinding Background}"
+							BorderBrush="{TemplateBinding BorderBrush}"
+							BorderThickness="1,1,1,0"
+							Margin="0,0,2,0">
+						<ContentPresenter x:Name="ContentSite"
+										VerticalAlignment="Center"
+										HorizontalAlignment="Center"
+										ContentSource="Header"
+										Margin="12,2"
+										RecognizesAccessKey="True"/>
+					</Border>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsSelected" Value="True">
+							<Setter TargetName="Border" Property="Background" Value="#3D3D3D"/>
+							<Setter TargetName="Border" Property="BorderBrush" Value="#3F3F3F"/>
+						</Trigger>
+						<Trigger Property="IsMouseOver" Value="True">
+							<Setter TargetName="Border" Property="Background" Value="#2D2D2D"/>
+						</Trigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsSelected" Value="True"/>
+								<Condition Property="IsMouseOver" Value="True"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="Border" Property="Background" Value="#4D4D4D"/>
+						</MultiTrigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
 		<Style.Triggers>
 			<Trigger Property="IsSelected" Value="True">
-				<Setter Property="Background" Value="#1E1E1E"/>
-				<Setter Property="Foreground" Value="#FFFFFF"/>
-				<Setter Property="BorderBrush" Value="#3F3F3F"/>
+				<Setter Property="Background" Value="#3D3D3D"/>
 			</Trigger>
 			<Trigger Property="IsMouseOver" Value="True">
-				<Setter Property="Background" Value="#3D3D3D"/>
+				<Setter Property="Background" Value="#2D2D2D"/>
 			</Trigger>
 		</Style.Triggers>
 	</Style>
@@ -294,4 +247,3 @@
 		<Setter Property="Background" Value="#1E1E1E"/>
 	</Style>
 </ResourceDictionary>
-
